--- a/src/components/give suggestion/Suggesion.css
+++ b/src/components/give suggestion/Suggesion.css
@@ -7,7 +7,7 @@
 #SuggestionCard{
     width: 430px;
     height: 608px;
-    background-color: peru;
+    
     position: fixed;
     bottom: 32px;
     right: 32px;
@@ -33,7 +33,8 @@
     height: 72px;
     gap: 24px;
     padding-top: 30px;
-        
+        display: flex;
+        justify-content: center;
     padding: 24px, 16px, 24px, 16px;
     
 
@@ -48,6 +49,7 @@ p{
     color: #4D4D4D;
     width: 326px;
     height: 48px;
+    margin-left: 19px;
 }
 
 #divider{
@@ -181,6 +183,10 @@ button p{
     width: 74px;
     text-align: center;
     color: #F8F8F8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -12px;
     
 }
 
@@ -192,4 +198,210 @@ button p{
     display: flex;
     justify-content: end;
     align-items: center;
+}
+
+
+@media screen and (max-width: 600px){
+
+    #SuggestionCard{
+        width: 360px;
+        height: 566px;
+        
+        position: fixed;
+        top: 30px;
+        
+
+    }
+
+    #suggestion{
+        width:  360px;
+        height:  494px;
+        background-color: #F8F8F8;
+        top: 70px;
+        position: relative;
+        padding: 24px, 12px, 24px, 12px;
+        border-radius: 20px, 20px, 0px, 0px;
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        
+    
+       
+    }
+
+    #header{
+        width: 336px;
+        height: 60px;
+        gap: 16px;
+        padding-top: 30px;
+           margin-left: -24px;
+        padding: 24px, 16px, 24px, 16px;
+        
+    
+    }
+    
+    p{
+        font-family: "Poppins", sans-serif;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 21.6px;
+        text-align: Center;
+        color: #4D4D4D;
+        width: 288px;
+        height: 44px;
+        
+    }
+    
+    #divider{
+        border-bottom: 1px solid #CCCCCC;
+        width: 336px;
+        
+      
+       
+    
+    }
+
+
+    
+#issueContent{
+    width: 336px;
+    height: 362px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 12px   ;
+    top: 102px;
+    
+}
+
+.chooseLabel{
+    padding-left: 16px;
+}
+
+.dropdown{
+    padding-left: 16px;
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 500;
+}
+
+#chooseSection{
+    width: 336px;
+    height: 64px;
+    display: flex;
+    gap: 12px;
+    flex-direction: column;
+    padding: 12px, 16px, 12px, 16px;
+}
+
+h5{
+    color: #4D4D4D;
+    padding-left: 8px;
+}
+
+
+select{
+    width: 336px;
+    height:36px;
+    background-color:#E0E0E0;
+    border: 1px solid  #CCCCCC;
+    padding: 12px, 16px, 12px, 16px;
+    border-radius: 8px;
+    color: #333333;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 18px;
+}
+
+#label{
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    color: #4D4D4D;
+    width: 264px;
+    padding-top: 10px;
+    height: 16px;
+}
+
+#descriptionSection{
+    display: flex;
+    width: 336px;
+    height: 278px;
+    margin-left: 16px;
+    
+    
+    flex-direction: column;
+    
+    
+}
+
+#Description{
+    width:336px;
+    height:250px;
+    padding-top: 20px;
+    padding-left: 8px;
+    
+    
+
+
+}
+
+input{
+    width: 336px;
+    height: 180px;
+    border-radius: 8px;
+    border: 1px solid #CCCCCC;
+    justify-content: space-between;
+    padding: 12px, 16px, 12px, 16px;
+    background-color: #E0E0E0;
+    
+}
+
+button{
+    width: 106px;
+    height: 38px;
+    border-radius: 4px;
+    rotate: 90;
+    opacity: 60%;
+    padding: 10px, 20px, 10px, 20px;
+    background-color: #0F0F0F;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+
+button p{
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 20px;
+    width: 74px;
+    text-align: center;
+    color: #F8F8F8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+#email{
+    width: 336px;
+    height: 60px;
+    
+    
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+
+   
+
+
 }
