--- a/src/components/share feedback/feedback.css
+++ b/src/components/share feedback/feedback.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
+
 #feedback{
     width:430px;
     height: 520px;
-    background-color: pink;
+    position: fixed;
+    bottom: 32px;
+    right: 32px;
 }
 
 #card{
@@ -35,36 +42,153 @@ p{
     color: #4D4D4D;
     width: 326px;
     height: 48px;
+    padding-left: 40px;
 }
 
 #divider{
     border-bottom: 2px solid #CCCCCC;
     width: 398px;
-    
+    margin-left: 20px;
   
    
 
 }
 
 
+
+
 #feedbackContent{
     width: 398px;
     height:296px;
-    background-color: cyan;
+    padding-left: 16px;
+    
 }
 
 #input{
     width: 398px;
     height: 224px;
-    background-color: purple;
+    border: 1px solid #CCCCCC;
+    justify-content: space-between;
+    padding: 12px, 16px, 12px, 16px;
+    background-color: #E0E0E0;
 }
 
 #button{
     width: 398px;
     height: 72px;
-    background-color: bisque;
+    
     display: flex;
     justify-content: end;
     align-items: center;
 }
 
+button p{
+    padding-left: 0px;
+}
+
+
+@media screen and (max-width: 600px){
+    #feedback{
+        width:360px;
+        height: 490px;
+        
+        position: fixed;
+        top: 84px;
+        left: 35px;
+    }
+    
+    #card{
+        width:360px ;
+        height:418px;
+        border-radius: 20px, 20px, 0px, 0px;
+        padding: 24px, 16px, 24px, 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        background-color:#F8F8F8 ;
+        top: 90px;
+        position: relative;
+    }
+    
+    #header{
+        width: 360px;
+        height: 60px;
+        gap: 16px;
+        padding-top: 30px;
+        font-family: "Poppins", sans-serif;
+        padding: 24px, 16px, 24px, 16px;
+        
+    
+    }
+    
+    p{
+        font-family: "Poppins", sans-serif;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 21.6px;
+        text-align: Center;
+        color: #4D4D4D;
+        width: 288px;
+        height: 44px;
+    }
+    
+    #divider{
+        border-bottom: 1px solid #CCCCCC;
+        width: 336px;
+        
+        
+      
+       
+    
+    }
+
+    
+#feedbackContent{
+    width: 336px;
+    height:286px;
+    
+    margin-left: -3px;
+}
+
+#input{
+    width: 336px;
+    height: 216px;
+    
+    border: 1px solid #CCCCCC;
+    justify-content: space-between;
+    padding: 12px, 16px, 12px, 16px;
+    background-color: #E0E0E0;
+    
+    
+}
+
+#button{
+   position: relative;
+   right: 60px;
+    
+    margin-top: 15px;
+}
+
+button{
+   
+    width: 106px;
+    height: 38px;
+   padding-left: 0px;
+   border-radius: 4px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+button p{
+    padding-left:-40px ;
+}
+
+#fab{
+     position: relative;
+    top: 70px;
+ }
+
+
+    
+}
