--- a/src/components/closed view/CloseView.css
+++ b/src/components/closed view/CloseView.css
@@ -41,7 +41,47 @@
     margin:10px;
   }
 
+  @media screen and (max-width: 600px){
+
+    nav{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 2px solid  gray;
+      width: 100%;
+      height: 100px;
+      top: 0;
+      background-color: red;
+      position: fixed;
+      
   
+    }
+
+
+    ul{
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      list-style: none;
+    }
+  
+    #logo{
+      width: 100px;
+      
+      text-align: center;
+    }
+    
+  
+    span{
+      background-color: white;
+      color: black;
+      margin:10px;
+      
+    }
+
+
+
+  }
  
   
 
